// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status component tests Snapshot test cell 1`] = `
<Status
  appTitle="My application"
  code="C"
  dateString="10/05/2019"
  description="This is my status"
  icon={false}
  id="tablePopover"
  note="This is a note"
  popOver={false}
  statuses={Array []}
  tableCell={true}
>
  <td
    style={
      Object {
        "backgroundColor": "#cc0000",
        "color": "#fff",
      }
    }
  >
    C
  </td>
</Status>
`;

exports[`Status component tests Snapshot test cell with popover 1`] = `
<Status
  appTitle="My application"
  code="C"
  dateString="10/05/2019"
  description="This is my status"
  icon={false}
  id="tablePopover5"
  note="This is a note"
  popOver={true}
  statuses={Array []}
  tableCell={true}
>
  <td
    id="tablePopover5"
    style={
      Object {
        "backgroundColor": "#cc0000",
        "color": "#fff",
        "cursor": "pointer",
      }
    }
    tabIndex="0"
  >
    C
    <BS4Popover
      body={
        <div>
          <ForwardRef(styled.ul)>
            <li>
              <ForwardRef(styled.span)>
                App
              </ForwardRef(styled.span)>
              My application
            </li>
            <li>
              <ForwardRef(styled.span)>
                Date
              </ForwardRef(styled.span)>
              10/05/2019
            </li>
          </ForwardRef(styled.ul)>
          <div>
            <hr />
            This is a note
          </div>
        </div>
      }
      hover={true}
      id="tablePopover5"
      popOverTitle={
        <div>
          <Thunder
            alt="Thunder"
            color="#cc0000"
            size="50px"
          />
          <span
            style={
              Object {
                "display": "inline-block",
                "width": "10px",
              }
            }
          />
          This is my status
        </div>
      }
    >
      <div>
        <Popover
          isOpen={false}
          placement="bottom"
          placementPrefix="bs-popover"
          target="tablePopover5"
          toggle={[Function]}
          trigger="hover focus"
        >
          <TooltipPopoverWrapper
            autohide={false}
            delay={
              Object {
                "hide": 0,
                "show": 0,
              }
            }
            fade={true}
            hideArrow={false}
            innerClassName="popover-inner"
            isOpen={false}
            placement="bottom"
            placementPrefix="bs-popover"
            popperClassName="popover show"
            target="tablePopover5"
            toggle={[Function]}
            trigger="hover focus"
          />
        </Popover>
      </div>
    </BS4Popover>
  </td>
</Status>
`;

exports[`Status component tests Snapshot test icon 1`] = `
<Status
  appTitle="My application"
  code="C"
  dateString="10/05/2019"
  description="This is my status"
  icon={true}
  id="icon"
  note="This is a note"
  popOver={false}
  statuses={Array []}
  tableCell={false}
>
  <Thunder
    alt="Thunder"
    color="#cc0000"
    size="50px"
  >
    <svg
      aria-label="Thunder"
      enableBackground="new 0 0 99.999 100"
      fill="#cc0000"
      height="50px"
      viewBox="0 0 99.999 100"
      width="50px"
      x="0px"
      xmlSpace="preserve"
      xmlns="http://www.w3.org/2000/svg"
      y="0px"
    >
      <path
        d="M72.724,72.729c-0.637,0-1.477,0-2.413,0l8.146-10.028c7.231-2.402,12.45-9.212,12.45-17.248
c0-10.041-8.14-18.178-18.182-18.178c-3.64,0-7.008,1.091-9.849,2.932C60.078,18.125,49.298,9.092,36.363,9.092
c-15.061,0-27.271,12.21-27.271,27.275c0,12.378,8.256,22.817,19.557,26.147L25.582,71.1C10.762,66.505,0,52.694,0,36.365
C0,16.284,16.281,0,36.363,0c13.646,0,25.522,7.528,31.742,18.648c1.509-0.26,3.041-0.466,4.621-0.466
c15.062,0,27.273,12.208,27.273,27.272C99.999,60.517,87.786,72.729,72.724,72.729z"
        fill="#cc0000"
      />
      <polygon
        fill="#cc0000"
        points="45.453,40.908 68.178,40.908 54.542,63.638 70.45,63.638 40.907,100 49.089,72.729 34.088,72.729"
      />
    </svg>
  </Thunder>
</Status>
`;

exports[`Status component tests Snapshot test icon with popover 1`] = `
<Status
  appTitle="My application"
  code="C"
  dateString="10/05/2019"
  description="This is my status"
  icon={true}
  id="iconPopover"
  note="This is a note"
  popOver={true}
  statuses={Array []}
  tableCell={false}
>
  <span
    id="iconPopover"
    style={
      Object {
        "cursor": "pointer",
      }
    }
    tabIndex="0"
  >
    <Thunder
      alt="Thunder"
      color="#cc0000"
      size="50px"
    >
      <svg
        aria-label="Thunder"
        enableBackground="new 0 0 99.999 100"
        fill="#cc0000"
        height="50px"
        viewBox="0 0 99.999 100"
        width="50px"
        x="0px"
        xmlSpace="preserve"
        xmlns="http://www.w3.org/2000/svg"
        y="0px"
      >
        <path
          d="M72.724,72.729c-0.637,0-1.477,0-2.413,0l8.146-10.028c7.231-2.402,12.45-9.212,12.45-17.248
c0-10.041-8.14-18.178-18.182-18.178c-3.64,0-7.008,1.091-9.849,2.932C60.078,18.125,49.298,9.092,36.363,9.092
c-15.061,0-27.271,12.21-27.271,27.275c0,12.378,8.256,22.817,19.557,26.147L25.582,71.1C10.762,66.505,0,52.694,0,36.365
C0,16.284,16.281,0,36.363,0c13.646,0,25.522,7.528,31.742,18.648c1.509-0.26,3.041-0.466,4.621-0.466
c15.062,0,27.273,12.208,27.273,27.272C99.999,60.517,87.786,72.729,72.724,72.729z"
          fill="#cc0000"
        />
        <polygon
          fill="#cc0000"
          points="45.453,40.908 68.178,40.908 54.542,63.638 70.45,63.638 40.907,100 49.089,72.729 34.088,72.729"
        />
      </svg>
    </Thunder>
    <BS4Popover
      body={
        <div>
          <ForwardRef(styled.ul)>
            <li>
              <ForwardRef(styled.span)>
                App
              </ForwardRef(styled.span)>
              My application
            </li>
            <li>
              <ForwardRef(styled.span)>
                Date
              </ForwardRef(styled.span)>
              10/05/2019
            </li>
          </ForwardRef(styled.ul)>
          <div>
            <hr />
            This is a note
          </div>
        </div>
      }
      hover={true}
      id="iconPopover"
      popOverTitle="This is my status"
    >
      <div>
        <Popover
          isOpen={false}
          placement="bottom"
          placementPrefix="bs-popover"
          target="iconPopover"
          toggle={[Function]}
          trigger="hover focus"
        >
          <TooltipPopoverWrapper
            autohide={false}
            delay={
              Object {
                "hide": 0,
                "show": 0,
              }
            }
            fade={true}
            hideArrow={false}
            innerClassName="popover-inner"
            isOpen={false}
            placement="bottom"
            placementPrefix="bs-popover"
            popperClassName="popover show"
            target="iconPopover"
            toggle={[Function]}
            trigger="hover focus"
          />
        </Popover>
      </div>
    </BS4Popover>
  </span>
</Status>
`;

exports[`Status component tests Snapshot test plain text 1`] = `
<Status
  appTitle="My application"
  code="C"
  dateString="10/05/2019"
  description="This is my status"
  icon={false}
  id="icon8"
  note="This is a note"
  popOver={false}
  statuses={Array []}
  tableCell={false}
>
  <span
    className="codeSpan"
    style={
      Object {
        "backgroundColor": "#cc0000",
        "color": "#fff",
      }
    }
  >
    C
  </span>
</Status>
`;
